<resources>
    <string name="app_name">Etiquette</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Enter Your LogIn details to chat with your friends!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Log In</string>
    <string name="create_new_account">Welcome! Enter Details</string>
    <string name="forget_password">Forget Password?</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_to_your_account">Log In to your Account</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="welcome_to_dizz_chat">Welcome to Dizz Chat</string>
    <string name="msg">Chat with your friends,share photos and video files fast with high quality</string>
    <string name="get_started">Get Started</string>
    <string name="new_account">Create New Account</string>
    <string name="do_you_already_have_an_account">Do you already have an account?</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
</resources>