<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:background="@color/primary"
        android:padding="@dimen/_24sdp"
        android:scrollbars="none"
        tools:context=".activities.SignInActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/logo2"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/welcome_back"
                android:gravity="start"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_11sdp"
                android:text="@string/login_to_continue"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:startIconDrawable="@drawable/acc"
                app:startIconTint="@color/white"
                android:textColorHint="@color/white"
                app:errorTextColor="@color/error"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:textSize="@dimen/_10sdp"
                android:background="@color/primary"
                android:textStyle="bold"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:background="@drawable/background_input"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                app:startIconDrawable="@drawable/pass"
                app:startIconTint="@color/white"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true"
                android:textColorHint="@color/white"
                app:errorTextColor="@color/error"
                android:textSize="@dimen/_10sdp"
                android:padding="@dimen/_7sdp"
                android:textStyle="bold"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:background="@drawable/background_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/inputForgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:text="@string/forget_password"
                android:textAlignment="textStart"
                android:textColor="@color/blue"
                android:textSize="@dimen/_9ssp"
                android:textStyle="bold"
                android:gravity="start" />

            <FrameLayout
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignIn"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:text="@string/sign_in"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/logo_green"
                    app:cornerRadius="@dimen/_10ssp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_marginTop="@dimen/_140sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/don_t_have_an_account"
                    android:id="@+id/do_you"
                    android:gravity="start"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/new_account"
                    android:id="@+id/textNewAccount"
                    android:textAlignment="textStart"
                    android:textStyle="normal"
                    android:textColorLink="@color/logo_green"
                    android:textColor="@color/blue"
                    android:paddingStart="@dimen/_4sdp"
                    android:textSize="@dimen/_8sdp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>