<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_24sdp"
        android:background="@color/primary"
        android:scrollbars="none"
        tools:context=".activities.SignUpActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/logo2"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/create_new_account"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:text="@string/msg"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/layoutImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@drawable/background_image"
                    android:scaleType="centerCrop"
                    app:riv_oval="true" />

                <TextView
                    android:id="@+id/textAddImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_image"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_7ssp" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:padding="@dimen/_1sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColorHint="@color/white"
                app:startIconDrawable="@drawable/acc"
                app:startIconTint="@color/white"
                app:errorTextColor="@color/error"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputName"
                    android:hint="@string/name"
                    android:textSize="@dimen/_9sdp"
                    android:textStyle="bold"
                    android:background="@drawable/background_input"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_7sdp"
                app:startIconDrawable="@drawable/email"
                app:startIconTint="@color/white"
                android:textColorHint="@color/white"
                app:errorTextColor="@color/error"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:background="@drawable/background_input"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:textStyle="bold"
                    android:textSize="@dimen/_9sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_7sdp"
                android:textColorHint="@color/white"
                app:errorTextColor="@color/error"
                app:startIconDrawable="@drawable/pass"
                app:startIconTint="@color/white"
                app:passwordToggleEnabled="true"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:background="@drawable/background_input"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textSize="@dimen/_9sdp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:errorTextColor="@color/error"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/pass"
                app:startIconTint="@color/white"
                android:padding="@dimen/_7sdp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputConfirmPassword"
                    android:background="@drawable/background_input"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:textSize="@dimen/_9sdp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignup"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:text="@string/sign_up"
                    app:backgroundTint="@color/logo_green"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_10ssp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_marginTop="@dimen/_90sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/do_you_already_have_an_account"
                    android:id="@+id/do_you"
                    android:gravity="start"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/log_in_to_your_account"
                    android:id="@+id/textSignIn"
                    android:textAlignment="textStart"
                    android:textStyle="normal"
                    android:textColorLink="@color/logo_green"
                    android:textColor="@color/blue"
                    android:paddingStart="@dimen/_4sdp"
                    android:textSize="@dimen/_8sdp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>