<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/primary"
    tools:context=".activities.IntroPage">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_300sdp"
        android:layout_marginTop="100dp"
        android:scaleX="2"
        android:scaleY="2"
        android:layout_marginBottom="400dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/WelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="200dp"
        android:text="@string/welcome_to_dizz_chat"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/WelMsg"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:text="@string/msg"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/WelText"
        app:layout_constraintTop_toBottomOf="@+id/WelText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/getStarted"
        android:layout_width="wrap_content"
        app:backgroundTint="@color/logo_green"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="36dp"
        android:text="@string/get_started"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelMsg"
        app:layout_constraintVertical_bias="0.09"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>